base/wiki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xwiki
  labels:
    name: xwiki
