base/wiki/xwiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki
  namespace: xwiki
  labels:
    app: xwiki
spec:
  selector:
    app: xwiki
  ports:
    - port: 80
      targetPort: 8080
      name: http
