base/wiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki
  namespace: xwiki
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: xwiki.oostrandpark.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xwiki
                port:
                  number: 80
